--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Todo List</h1>
-{% for event in DB %}
-    <h3>{{event[0]}} {{event[1]}}</h3>
-{% endfor %}
+<div id="events">
+    {% for event in DB %}
+        <h3>{{event[0]}} {{event[1]}}</h3>
+    {% endfor %}
+</div>
+
 <form action="/handle">
-    <span>Enter a task: </span>
+    <p>Enter a task: </p>
     <input type="text" name="action" placeholder="Task">
-    <span>Date: </span>
+    <p>Date: </p>
     <input type="text" name="time" placeholder="MM/DD/YY">
+    <p>Prority</p>
+    <select name="priority">
+        <option>Low</option>
+        <option>Medium</option>
+        <option>High</option>
+    </select>
     <button>Submit</button>
 </form>
 {% endblock %}
+
