--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,18 @@
 {% block content %}
 <h1>Todo List</h1>
 <div id="events">
-    {% for event in DB %}
-        <h3>{{event[0]}} {{event[1]}}</h3>
-    {% endfor %}
+    <table>
+        <tr>
+            <th>Task</th>
+            <th>Due Date</th>
+            <th>Priority</th>
+        </tr>
+        <tr>
+            {% for event in DB %}
+                <p>{{event[0]}} {{event[1]}}</p>
+            {% endfor %}
+        </tr>
+    </table>
 </div>
 
 <form action="/handle">
